@@ -13,6 +13,7 @@ Version 7.3. 15 April 2019 - xxx edition
 
 -Fixed bug having more than 256 text to adventure keyboard words
 -Fixed bug on CPC vertical scrolling
+-Fixed bug redrawing zx80/81 display, with realvideo disabled, and menu char width less than 8
 
 
 Version 7.2. 10 April 2019 - Neula edition
